# devteam

./: .gitignore  AGENT_CONFIG_ACCESS.md  CONFIG_GUIDE.md  FINAL_TEST_RESULTS.md  MULTI_BOT_ARCHITECTURE.md  Makefile  README.md  README_SCRIPTS.md  TEST_RESULTS.md  TEST_SUMMARY.md  agent_proxy.py  check_status.py  devteam.sh  fix_poetry_certificates.py  fix_ssl_cert.py  get_telegram_id.py  init_system.py  project.config.json  pyproject.toml  pytest.ini  register_agents.py  run_tests.py  setup_agent_workspace.sh  start-devteam.sh  start-simple.sh  start.sh  start_agents.py  start_all.py  start_system.py  start_telegram_bridge.py  start_telegram_bridge_fixed.py  stop-devteam.sh  stop.sh  test_anthropic.py  test_telegram.py  tool_server.py
agents/: api.py  base_agent.py  run_agent.py  run_agent_with_workspace.py  run_project_agent.py  run_workspace_agent.py  tool_agent.py
claude/: teamlead_workspace.md
claude_agents/: CLAUDE.md.ba  CLAUDE.md.backend  CLAUDE.md.common  CLAUDE.md.database  CLAUDE.md.frontend  CLAUDE.md.qa  CLAUDE.md.teamlead
config/: agent_workspace.json  claude-ba.md  claude-backend.md  claude-database.md  claude-frontend.md  claude-qa.md  config.json.example  settings.py
core/: agent_config.py  agent_manager.py  agent_tools.py  app_config.py  claude_agent.py  conversation_history.py  git_helper.py  github_sync.py  orchestrator.py  project_config.py  project_manager.py  telegram_bridge.py  template_manager.py  workspace_config.py  workspace_manager.py
docs/: multi-project-spec.md
scripts/: generate_claude.py  setup.py  setup_agent_workspace.py
(+51 files in other folders)
